# traffic-monitor

./: README.md
cfg/: camera.cfg  svm.yml  trafficmonitor.cfg  trafficmonitor.glade
docs/: traffic-monitor-video-database.xlsx
src/: CMakeLists.txt  TODO  arrow.cpp  arrow.h  background_model.cpp  background_model.h  blob.cpp  blob.h  camera_model.cpp  camera_model.h  circular_buffer.h  classifier.cpp  classifier.h  colorspacesmm.h  cscope.files  cvutils.cpp  cvutils.h  database.cpp  database.h  datatypes.h  defs.h  feature_tracking.cpp  feature_tracking.h  image_utils.cpp  image_utils.h  imagecv.h  main.cpp  model.cpp  model.h  movement_model.cpp  movement_model.h  observer.cpp  observer.h  pixeltrack_tracking.cpp  pixeltrack_tracking.h  planar_geom.cpp  planar_geom.h  progeo.c  progeo.h  proximity_tracking.cpp  (+27 more)
src/cfg/calibration_files/: alcala-foggy.cfg  camera_a6_hacia_madrid.cfg  camera_a6_hacia_villalba.cfg  india.cfg  india_dense_traffic.cfg  lluvia_ligera.cfg  lluvia_ligera_exp_memoria.cfg  srini_91.cfg  video-0006  video-0008  video-0008.cfg  video-0026.cfg  video-0033.cfg  video-0086.cfg  video-0102.cfg  video-0103.cfg
src/cfg/init_files/: vido-0006.cfg  vido-0008  vido-0026.cfg  vido-0044  vido-0086.cfg  vido-0102  vido-0103.cfg  vido-0110.cfg
tools/: create_pascal_tf_record.py  label_map_util.py
vehicles-dataset/: 49_00000006.xml  49_00000007.xml  49_00000010.xml  49_00000014.xml  49_00000019.xml  49_00000020.xml  49_00000024.xml  49_00000026.xml  49_00000028.xml  49_00000029.xml  49_00000034.xml  49_00000035.xml  49_00000044.xml  49_00000045.xml  49_00000047.xml  49_00000048.xml  (+76 more)
(+89 files in other folders)
